--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   
   "permissions": [
     "activeTab",
-    "storage"
+    "storage",
+    "downloads"
   ],
   
   "background": {
@@ -23,5 +24,10 @@
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Keyword Highlighter"
+  },
+  
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
   }
 }
