--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,12 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  
+ 
+  "icons": {
+    "16": "icons/icon-16.svg",
+    "48": "icons/icon-48.svg",
+    "128": "icons/jobscore-icon.svg"
+  },
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": ["content.js"],
