--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,19 @@
     "storage",
     "downloads"
   ],
+ 
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@jobscore-data-collection-with-fallback",
+      "data_collection_permissions": {
+        "required": [
+          "activeTab",
+          "storage",
+          "downloads"
+        ]
+      }
+    }
+  },
   
   "background": {
     "scripts": ["background.js"],
