Update manifest to restrict data collection permissions to website content only

--- a/manifest.json
+++ b/manifest.json
@@ -14,11 +14,7 @@
     "gecko": {
       "id": "@jobscore-data-collection-with-fallback",
       "data_collection_permissions": {
-        "required": [
-          "activeTab",
-          "storage",
-          "downloads"
-        ]
+        "required": ["websiteContent"]
       }
     }
   },
